--- a/code/figures.rmd
+++ b/code/figures.rmd
@@ -62,7 +62,9 @@ I2 <- ggplot(res2, aes(x = z, y = I2)) +
   xlab("Fisher's z") +
   coord_cartesian(ylim = c(0, 100)) +
   geom_text(x = 0.15, y = 80, label = "b = 69.40, R2 = 0.61", size = 3.5) +
-  theme_classic()
+  theme_classic() +
+  scale_y_continuous(name = expression(paste(I^2," index", sep = ""))) +
+  scale_x_continuous(name = "Effect size (Fisher's z)")
 
 
 # summary(lm(H2alt ~ z, data = res2)) #b = 3.81, R2 = 0.53
@@ -72,13 +74,15 @@ H2 <- ggplot(res2, aes(x = z, y = H2)) +
   geom_smooth(method = "lm", se = FALSE, color = "black") +
   xlab("Fisher's z") +
   geom_text(x = 0.14, y = 5.9, label = "b = 3.81, R2 = 0.53", size = 3.5) +
-  theme_classic()
+  theme_classic() +
+  scale_y_continuous(name = expression(paste(H^2," index", sep = ""))) +
+  scale_x_continuous(name = "Effect size (Fisher's z)")
 
 
 effect_het <- plot_grid(I2, H2, nrow = 2, labels = c("A", "B"), align = "v") #combine plots
 effect_het
-# save_plot("../figures/effect_het.png", effect_het,
-          # nrow = 2, base_aspect_ratio = 1.3)
+# save_plot("../figures/effect-het.png", effect_het,
+          # nrow = 2, base_aspect_ratio = 1.3, dpi = 600)
 
 ```
 
@@ -96,22 +100,41 @@ summary(lm(I2 ~ z, data = dropped_anchoring))
 dat3 <- readRDS("../data/tau_simulation_results.RDS")
 names(dat3) <- sort(unique(dat$effect)) #names were alphabetized upon splitting in simulation so must sort
 
+OR2d <- c('Allowed vs. forbidden', 'Gain vs. loss framing', 'Norm of reciprocity', 'Low vs. high category scales') #effects that were transformed from OR to SMD
+
+#Categorize effects by type of simulation for graphing
+effect_type <- distinct(select(dat, effect, effect_type)) %>% 
+  mutate(effect_type = ifelse(effect %in% OR2d | effect_type == "Risk difference" | 
+                                effect_type == "Raw mean difference", "MD", effect_type),
+         effect_type = recode(effect_type, "d" = 'SMD',
+                              "r" = "Fisher's z"))
+
+
+
 dat3 <- dat3 %>% 
   bind_rows(.id = "effect") %>% #create dataframe with identifier
-  select(I2, tau, effect) %>% 
-  group_by(tau, effect) %>% 
+  left_join(., effect_type) %>% 
+  select(I2, tau, effect, effect_type) %>% 
+  group_by(tau, effect, effect_type) %>% 
   summarize(I2 = mean(I2)) %>% #Take mean of I2 at each tau-level and for each effect
   ungroup()
 
 #combined line plot gives good overview. Point version of the same is also interesting.
-ggplot(dat3, aes(x = tau, y = I2, group = effect)) +
-  geom_line(alpha = 0.4) +
+ggplot(dat3, aes(x = tau, y = I2, group = effect, color = effect_type)) +
+  geom_line(alpha = 0.6) +
   theme_bw() +
-  scale_x_continuous(minor_breaks = NULL) +
-  scale_y_continuous(minor_breaks = NULL) +
-  coord_cartesian(ylim = c(0, 100))
+  scale_x_continuous(name = expression(paste("Between studies standard deviation ", tau)),
+                     minor_breaks = NULL) +
+  scale_y_continuous(name = expression(paste(I^2," index", sep = "")),
+                     minor_breaks = NULL) +
+  coord_cartesian(ylim = c(0, 100)) +
+  scale_color_brewer(name = "Effect type", palette = "Dark2", 
+                     breaks = c("Fisher's z", "MD", "SMD")) +
+  theme(legend.position = c(0.8, 0.4),
+        legend.background = element_rect(linetype = "solid", color = "black"))
+  
 
-# ggsave("../figures/tau-I2.png")
+# ggsave("../figures/tau-I2.png", dpi = 600, height =  4 , width = 6.47)
 
 ```
 
@@ -144,10 +167,20 @@ ggplot(I2_dist, aes(x = I2, group = Heterogeneity, fill = Heterogeneity, linetyp
   geom_density(alpha = 0.3) +
   theme_classic() +
   coord_cartesian(xlim = c(0, 100))  +
-  scale_fill_brewer(palette = "Dark2", breaks = c("Zero", "Small", "Medium", "Large", "Observed")) +
-  scale_linetype_manual(values = c( "dotdash", "dotted", "solid", "solid", "dashed"), breaks = c("Zero", "Small", "Medium", "Large", "Observed")) +
-  scale_color_brewer(palette = "Dark2", breaks = c("Zero", "Small", "Medium", "Large", "Observed"))
+  scale_fill_brewer(palette = "Dark2",
+                    breaks = c("Zero", "Small", "Medium", "Large", "Observed"),
+                    labels = c("Zero (0%)", "Small (25%)", "Medium (50%)", "Large (75%)", "Observed")) +
+  scale_linetype_manual(values = c( "dotdash", "dotted", "solid", "solid", "dashed"),
+                        breaks = c("Zero", "Small", "Medium", "Large", "Observed"), 
+                        labels = c("Zero (0%)", "Small (25%)", "Medium (50%)", "Large (75%)", "Observed")) +
+  scale_color_brewer(palette = "Dark2", 
+                     breaks = c("Zero", "Small", "Medium", "Large", "Observed"),
+                     labels = c("Zero (0%)", "Small (25%)", "Medium (50%)", "Large (75%)", "Observed")) +
+  theme(legend.position = c(0.85, 0.71),
+        legend.background = element_rect(linetype = "solid", color = "black")) +
+  scale_y_continuous(name = "Density") +
+  scale_x_continuous(name = expression(paste(I^2," index", sep = "")))
 
-# ggsave("../figures/density-I2.png")
+# ggsave("../figures/density-I2.png", dpi = 600, height =  4 , width = 6.47)
 ```
 
